--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Información Personal</h2>
         <p>Edad: 22 años</p>
         <p>Ciudad: Arequipa</p>
-        <p>Email: <a href="mailto:carlos.uracahua.valenzuela@ucsp.edu.pe">gustavo.alpaca@ucsp.edu.pe</a></p>
+        <p>Email: <a href="mailto:carlos.uracahua.valenzuela@ucsp.edu.pe">carlos.uracahua.valenzuela@ucsp.edu.pe</a></p>
 
         <h2>Estudios</h2>
         <p>Actualmente estoy cursando la carrera de Ciencias de la Computación en la Universidad Católica San Pablo.</p>
